# GlimmerX

./: .gitignore  AGENTS.md  BUG_TRACKER.md  DESIGN.md  IMPLEMENTATION.md  LICENSE  Makefile  README.md  eslint.config.js  package.json  setup-ubuntu.sh  setup-windows.ps1  tsconfig.json  vite.config.ts  vitest.config.ts
.opencode/plans/: 2026-07-05-transaction-form-enter-and-list-performance-plan.md  2026-07-05-transaction-form-enter-and-list-performance.md
design/: 01-overview.md  02-roadmap.md  03-concepts.md  04-requirements.md  05-data-model.md  06-api.md  07-frontend.md  08-constraints.md  09-testing.md  10-build.md  11-risks.md  12-references.md  13-errors.md  14-transaction-module.md  15-transaction-create.md  16-transaction-quick-add.md  17-transaction-list.md  18-transaction-detail-edit.md  19-data-export.md  20-data-import.md
hooks/: AGENTS.md  pre-commit
public/: AGENTS.md
src/: AGENTS.md  App.test.tsx  App.tsx  main.tsx  setupTests.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: AGENTS.md  default.json
src-tauri/icons/: AGENTS.md  icon.icns
src-tauri/src/: AGENTS.md  constants.rs  lib.rs  main.rs
src-tauri/src/commands/: accounts.rs  budgets.rs  categories.rs  dashboard.rs  data.rs  db.rs  mod.rs  reports.rs  transactions.rs
src-tauri/src/db/: accounts.rs  budgets.rs  categories.rs  dashboard.rs  export.rs  import.rs  mod.rs  recent_dbs.rs  reports.rs  schema.rs  transactions.rs
src-tauri/src/utils/: mod.rs  time.rs  validation.rs
src/assets/: AGENTS.md
src/components/: ChangePasswordDialog.test.tsx  (+2 more)
(+126 files in other folders)
