[package]
name = "glimmerx"
version = "0.1.0"
description = "A personal double-entry bookkeeping desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "glimmerx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
rusqlite = { version = "0.39", features = ["bundled-sqlcipher-vendored-openssl"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
dirs = "6"
itertools = "0.14"
csv = "1.3"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
